--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ZingCraft - Self discovery</title>
+    <title>Zingcraft-Self discovery<</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Free HTML Templates" name="keywords" />
     <meta content="Free HTML Templates" name="description" />
@@ -193,116 +193,116 @@
     <!-- Team End -->
 
     <!-- Footer Start -->
-    <div id ="footer"
-    class="container-fluid text-white mt-5 py-5 px-sm-3 px-md-5" style = "background-color: #4f099a;"
-  >
-    <div class="row pt-5">
-      <div class="col-lg-3 col-md-6 mb-5">
-        <a
-          href=""
-          class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0"
-          style="font-size: 40px; line-height: 40px"
-        >
-       <i  src="img/boy.png" ></i>
-          <span class="text"  style ="color: #ffec00">ZingCraft</span>
-        </a>
-        <p>
-          You may never know what you are capable of.Unleash your Potential with ZingCraft to make your life easier
-        </p>
-        <div class="d-flex justify-content-start mt-4">
-          <a
-            class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-            style="width: 38px; height: 38px"
-            href="#"
-            ><i class="fab fa-linkedin-in"  style ="color: #ffec00"></i
-          ></a>
-          <a
-            class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
-            style="width: 38px; height: 38px"
-            href="#"
-            ><i class="fab fa-instagram"  style ="color: #ffec00"></i
-          ></a>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 mb-5">
-        <h3 class="mb-4"  style ="color: #ffec00">Get In Touch</h3>
-        <div class="d-flex">
-          <h4 class="fa fa-map-marker-alt"  style ="color: #ffec00"></h4>
-          <div class="pl-3">
-            <h5 class="text"  style ="color: #ffec00">Address</h5>
-            <p>20/E ZingCraft Main Office, Keeranatham Road, Saravnampatti, Coimbatore</p>
-          </div>
-        </div>
-        <div class="d-flex">
-          <h4 class="fa fa-envelope"  style ="color: #ffec00"></h4>
-          <div class="pl-3">
-            <h5 class="text" style ="color: #ffec00">Email</h5>
-            <p>Contactus@zingcraft.com</p>
-          </div>
-        </div>
-        <div class="d-flex">
-          <h4 class="fa fa-phone-alt" style ="color: #ffec00"></h4>
-          <div class="pl-3">
-            <h5 class="text"  style ="color: #ffec00">Phone</h5>
-            <p>+91 8610371947</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 mb-5">
-        <h3 class="mb-4" style ="color: #ffec00">Quick Links</h3>
-        <div class="d-flex flex-column justify-content-start">
-          <a class="text-white mb-2" href="#"
-            ><i class="fa fa-angle-right mr-2"></i>Home</a
-          >
-          <a class="text-white mb-2" href="#"
-            ><i class="fa fa-angle-right mr-2"></i>Life Skills</a
-          >
-          <a class="text-white mb-2" href="#"
-            ><i class="fa fa-angle-right mr-2"></i>Our Services</a
-          >
-          <a class="text-white" href="#"
-            ><i class="fa fa-angle-right mr-2"></i>Contact Us</a
-          >
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 mb-5">
-        <h3 class="text"  style ="color: #ffec00">Newsletter</h3>
-        <form action="">
-          <div class="form-group">
-            <input
-              type="text"
-              class="form-control border-0 py-4"
-              placeholder="Your Name"
-              required="required"
-            />
-          </div>
-          <div class="form-group">
-            <input
-              type="email"
-              class="form-control border-0 py-4"
-              placeholder="Your Email"
-              required="required"
-            />
-          </div>
-          <div>
-            <button
-              class="btn btn-primary btn-block border-0 py-3" style = "background-color: #7c3dbf"
-              type="submit"
-            >
-              Submit Now
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-    <div
-      class="container-fluid pt-5"
-      style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;"
+    <div id = "footer"
+      class="container-fluid text-white mt-5 py-5 px-sm-3 px-md-5" style = "background-color: #4f099a;"
     >
-      <p class="m-0 text-center text-white">
-        &copy;
-        <a class="font-weight-bold" style = color:#ffec00 href="#">ZingCraft's site</a>
-        All Rights Reserved.
+      <div class="row pt-5">
+        <div class="col-lg-3 col-md-6 mb-5">
+          <a
+            href=""
+            class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0"
+            style="font-size: 40px; line-height: 40px"
+          >
+         <i  src="img/boy.png" ></i>
+            <span class="text"  style ="color: #ffec00">ZingCraft</span>
+          </a>
+          <p style = 'color:#fff;'>
+          Find your Passion like never before.You may never know what you are capable of. Unleash your Potential with ZingCraft to make your life easier
+          </p>
+          <div class="d-flex justify-content-start mt-4">
+            <a
+              class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+              style="width: 38px; height: 38px"
+              href="#"
+              ><i class="fab fa-linkedin-in"  style ="color: #ffec00"></i
+            ></a>
+            <a
+              class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
+              style="width: 38px; height: 38px"
+              href="#"
+              ><i class="fab fa-instagram"  style ="color: #ffec00"></i
+            ></a>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-5">
+          <h3 class="mb-4"  style ="color: #ffec00">Get In Touch</h3>
+          <div class="d-flex">
+            <h4 class="fa fa-map-marker-alt"  style ="color: #ffec00"></h4>
+            <div class="pl-3">
+              <h5 class="text"  style ="color: #ffec00">Address</h5>
+              <p style = "color: #fff;">20/E ZingCraft Main Office, Keeranatham Road, Saravnampatti, Coimbatore</p>
+            </div>
+          </div>
+          <div class="d-flex">
+            <h4 class="fa fa-envelope"  style ="color: #ffec00"></h4>
+            <div class="pl-3">
+              <h5 class="text" style ="color: #ffec00">Email</h5>
+              <p style = "color: #fff;">Contactus@zingcraft.com</p>
+            </div>
+          </div>
+          <div class="d-flex">
+            <h4 class="fa fa-phone-alt" style ="color: #ffec00"></h4>
+            <div class="pl-3">
+              <h5 class="text"  style ="color: #ffec00">Phone</h5>
+              <p style = "color: #fff">+91 8610371947</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-5">
+          <h3 class="mb-4" style ="color: #ffec00">Quick Links</h3>
+          <div class="d-flex flex-column justify-content-start">
+            <a class="text-white mb-2" href="#"
+              ><i class="fa fa-angle-right mr-2"></i>Home</a
+            >
+            <a class="text-white mb-2" href="#"
+              ><i class="fa fa-angle-right mr-2"></i>Life Skills</a
+            >
+            <a class="text-white mb-2" href="#"
+              ><i class="fa fa-angle-right mr-2"></i>Our Services</a
+            >
+            <a class="text-white" href="#"
+              ><i class="fa fa-angle-right mr-2"></i>Contact Us</a
+            >
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-5">
+          <h3 class="text"  style ="color: #ffec00">Newsletter</h3>
+          <form action="">
+            <div class="form-group">
+              <input
+                type="text"
+                class="form-control border-0 py-4"
+                placeholder="Your Name"
+                required="required"
+              />
+            </div>
+            <div class="form-group">
+              <input
+                type="email"
+                class="form-control border-0 py-4"
+                placeholder="Your Email"
+                required="required"
+              />
+            </div>
+            <div>
+              <button
+                class="btn btn-primary btn-block border-0 py-3" style = "background-color: #7c3dbf"
+                type="submit"
+              >
+                Submit Now
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div
+        class="container-fluid pt-5"
+        style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;"
+      >
+        <p class="m-0 text-center text-white">
+          &copy;
+          <a class="font-weight-bold" style = color:#ffec00 href="#">ZingCraft's site</a>
+          All Rights Reserved.
         <!-- Footer End -->
 
     <!-- Back to Top -->
