--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Zing</title>
+    <title>Zingcraft-Self discovery</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Free HTML Templates" name="keywords" />
     <meta content="Free HTML Templates" name="description" />
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon" />
+    <link href="img/Zcr.png" rel="icon" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -416,7 +416,7 @@ We teach life skills to teens through interactive activities, helping them devel
             <span class="text"  style ="color: #ffec00">ZingCraft</span>
           </a>
           <p style = 'color:#fff;'>
-            You may never know what you are capable of. Unleash your Potential with ZingCraft to make your life easier
+          Find your Passion like never before.You may never know what you are capable of. Unleash your Potential with ZingCraft to make your life easier
           </p>
           <div class="d-flex justify-content-start mt-4">
             <a
