--- a/class.html
+++ b/class.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>KidKinder - Kindergarten Website Template</title>
+    <title>Zingcraft-Self discovery<</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Free HTML Templates" name="keywords" />
     <meta content="Free HTML Templates" name="description" />
@@ -196,7 +196,7 @@
     <!-- Registration End -->
 
     <!-- Footer Start -->
-    <div id ="footer"
+    <div id = "footer"
     class="container-fluid text-white mt-5 py-5 px-sm-3 px-md-5" style = "background-color: #4f099a;"
   >
     <div class="row pt-5">
@@ -209,8 +209,8 @@
        <i  src="img/boy.png" ></i>
           <span class="text"  style ="color: #ffec00">ZingCraft</span>
         </a>
-        <p>
-          You may never know what you are capable of.Unleash your Potential with ZingCraft to make your life easier
+        <p style = 'color:#fff;'>
+        Find your Passion like never before.You may never know what you are capable of. Unleash your Potential with ZingCraft to make your life easier
         </p>
         <div class="d-flex justify-content-start mt-4">
           <a
@@ -233,21 +233,21 @@
           <h4 class="fa fa-map-marker-alt"  style ="color: #ffec00"></h4>
           <div class="pl-3">
             <h5 class="text"  style ="color: #ffec00">Address</h5>
-            <p>20/E ZingCraft Main Office, Keeranatham Road, Saravnampatti, Coimbatore</p>
+            <p style = "color: #fff;">20/E ZingCraft Main Office, Keeranatham Road, Saravnampatti, Coimbatore</p>
           </div>
         </div>
         <div class="d-flex">
           <h4 class="fa fa-envelope"  style ="color: #ffec00"></h4>
           <div class="pl-3">
             <h5 class="text" style ="color: #ffec00">Email</h5>
-            <p>Contactus@zingcraft.com</p>
+            <p style = "color: #fff;">Contactus@zingcraft.com</p>
           </div>
         </div>
         <div class="d-flex">
           <h4 class="fa fa-phone-alt" style ="color: #ffec00"></h4>
           <div class="pl-3">
             <h5 class="text"  style ="color: #ffec00">Phone</h5>
-            <p>+91 8610371947</p>
+            <p style = "color: #fff">+91 8610371947</p>
           </div>
         </div>
       </div>
@@ -300,7 +300,7 @@
     </div>
     <div
       class="container-fluid pt-5"
-      style="border-top: 1px solid rgba(108, 170, 180, 0.2) ;"
+      style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;"
     >
       <p class="m-0 text-center text-white">
         &copy;
