--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
+
+    <meta name="google-site-verification" content="777gr_SY6iJ7VcouQ19QLA73fUC4W64qgrPabMXPZyo" />
   </head>
 
   <body>
