--- a/class.html
+++ b/class.html
@@ -8,7 +8,7 @@
     <meta content="Free HTML Templates" name="description" />
 
     <!-- Favicon -->
-    <link href="img/Zct.png" rel="icon" />
+    <link href="img/icon.png" rel="icon" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -210,19 +210,19 @@
           <span class="text"  style ="color: #ffec00">ZingCraft</span>
         </a>
         <p style = 'color:#fff;'>
-        Find your Passion like never before.You may never know what you are capable of. Unleash your Potential with ZingCraft to make your life easier
+        Find your Passion like never before.You may never know what you are capable of.Unleash your Potential with ZingCraft to make your life easier
         </p>
         <div class="d-flex justify-content-start mt-4">
           <a
             class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
             style="width: 38px; height: 38px"
-            href="#"
+            href="https://www.linkedin.com/company/zingcraft-11/"
             ><i class="fab fa-linkedin-in"  style ="color: #ffec00"></i
           ></a>
           <a
             class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
             style="width: 38px; height: 38px"
-            href="#"
+            href="https://www.instagram.com/zingcraft11/"
             ><i class="fab fa-instagram"  style ="color: #ffec00"></i
           ></a>
         </div>
@@ -233,14 +233,14 @@
           <h4 class="fa fa-map-marker-alt"  style ="color: #ffec00"></h4>
           <div class="pl-3">
             <h5 class="text"  style ="color: #ffec00">Address</h5>
-            <p style = "color: #fff;">20/E ZingCraft Main Office, Keeranatham Road, Saravnampatti, Coimbatore</p>
+            <p style = "color: #fff;">ZingCraft,20E/VKV Kumaraguru Nagar, Keeranatham Road, Saravanampatti, Coimbatore 641035</p>
           </div>
         </div>
         <div class="d-flex">
           <h4 class="fa fa-envelope"  style ="color: #ffec00"></h4>
           <div class="pl-3">
             <h5 class="text" style ="color: #ffec00">Email</h5>
-            <p style = "color: #fff;">Contactus@zingcraft.com</p>
+            <p style = "color: #fff;">admin@zingcraft.in</p>
           </div>
         </div>
         <div class="d-flex">
