--- a/class.html
+++ b/class.html
@@ -90,7 +90,7 @@
     <div class="col-12 text-center mb-5">
       <div class="row">
         <div class="col-md-6">
-          <img src="img/about-1.jpg" alt="Counselling Services Image" class="img-fluid" style="width: 400px; height: 500px;">
+          <img src="img/covernew.png" alt="Counselling Services Image" class="img-fluid" style="width: 400px; height: 500px;">
         </div>
         <div class="col-md-6">
           <div class="service-card">
@@ -263,9 +263,7 @@
           <a class="text-white mb-2" href="#"
             ><i class="fa fa-angle-right mr-2"></i>Our Services</a
           >
-          <a class="text-white" href="#"
-            ><i class="fa fa-angle-right mr-2"></i>Contact Us</a
-          >
+         
         </div>
       </div>
       <div class="col-lg-3 col-md-6 mb-5">
