--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <a href="#Problem" class="btn btn-secondary mt-1 py-3 px-5"  style ="background-color: #5a00ba" style ="color: #7c3dbf">Learn More</a>
         </div>
         <div class="col-lg-6 text-center text-lg-right">
-          <img class="img-fluid mt-5" src="img/covernew.png" alt="" style="height: 650px; width: 450px;">
+          <img class="img-fluid mt-5" src="img/Crop.png" alt="" style="height: 650px; width: 450px;">
         </div>
       </div>
     </div>
@@ -472,9 +472,7 @@ We teach life skills to teens through interactive activities, helping them devel
             <a class="text-white mb-2" href="#"
               ><i class="fa fa-angle-right mr-2"></i>Our Services</a
             >
-            <a class="text-white" href="#"
-              ><i class="fa fa-angle-right mr-2"></i>Contact Us</a
-            >
+         
           </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
