--- a/class.html
+++ b/class.html
@@ -90,7 +90,7 @@
     <div class="col-12 text-center mb-5">
       <div class="row">
         <div class="col-md-6">
-          <img src="img/covernew.png" alt="Counselling Services Image" class="img-fluid" style="width: 400px; height: 500px;">
+          <img src="img/cover.png" alt="Counselling Services Image" class="img-fluid" style="width: 400px; height: 500px;">
         </div>
         <div class="col-md-6">
           <div class="service-card">
