--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
       <div class="row align-items-center px-1">
         <div class="col-lg-6 text-center text-lg-left">
-          <h4 class="mb-2 mt-3 mt-lg-0" style ="color: #000000; margin-top: 30px;" >India's Only Self Discovery Program for Teenagers</h4>
+          <h4 class="mb-2 mt-3 mt-lg-0" style ="color: #000000;" >India's Only Self Discovery Program for Teenagers</h4>
           <h1 class="display-3 font-weight-bold" style ="color: #000000">
             New Approach to Students Education
           </h1>
@@ -77,7 +77,7 @@
           <a href="#Problem" class="btn btn-secondary mt-1 py-3 px-5"  style ="background-color: #5a00ba" style ="color: #7c3dbf">Learn More</a>
         </div>
         <div class="col-lg-6 text-center text-lg-right">
-          <img class="img-fluid mt-5" src="img/Crop.png" alt="" style="height: 450px; width: 400px; margin-bottom: 15px;">
+          <img class="img-fluid mt-5" src="img/Crop.png" alt="" style="height: 450px; width: 400px;">
         </div>
       </div>
     </div>
