--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <a href="#Problem" class="btn btn-secondary mt-1 py-3 px-5"  style ="background-color: #5a00ba" style ="color: #7c3dbf">Learn More</a>
         </div>
         <div class="col-lg-6 text-center text-lg-right">
-          <img class="img-fluid mt-5" src="img/Crop.png" alt="" style="height: 550px; width: 500px;">
+          <img class="img-fluid mt-5" src="img/Crop.png" alt="" style="height: 500px; width: 450px; margin-bottom: 15px;">
         </div>
       </div>
     </div>
