--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container-fluid px-0 px-md-5 mb-5" style = "background-color: #faf16f">
     
       <div class="row align-items-center px-1">
-        <div class="col-lg-6 text-center text-lg-left">
+        <div class="col-lg-6 text-center text-lg-left" style="margin-top: 20px;">
           <h4 class="mb-2 mt-3 mt-lg-0" style ="color: #000000;" >India's Only Self Discovery Program for Teenagers</h4>
           <h1 class="display-3 font-weight-bold" style ="color: #000000">
             New Approach to Students Education
