--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="col-lg-6 text-center text-lg-left" style="margin-top: 40px;">
           <h4 class="mb-2 mt-3 mt-lg-0" style ="color: #000000;" >India's Only Self Discovery Program for Teenagers</h4>
           <h1 class="display-3 font-weight-bold" style ="color: #000000">
-            New Approach to Students Education]
+            New Approach to Students Education
           </h1>
           <p class="display-4 font-weight-bold mb-4"  style ="color: #7c3dbf">
            Find What You Love!
