--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link href="img/icon.png" rel="icon" />
     <title>ZingCraft</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta content="Self-discovery Program" name="keywords" />
+    <meta content="Self-discovery Program" name="description" />
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -462,7 +462,10 @@ We teach life skills to teens through interactive activities, helping them devel
             <h4 class="fa fa-phone-alt" style ="color: #ffec00"></h4>
             <div class="pl-3">
               <h5 class="text"  style ="color: #ffec00">Phone</h5>
-              <p style = "color: #fff">+91 8610371947</p>
+              <p style = "color: #fff">+91 8610371947
+                +91 9360407431
+                +91 9655026660
+              </p>
             </div>
           </div>
         </div>
