--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>ZingCraft</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta content="Life Skills" name="keywords" />
+    <meta content="Life Skills" name="description" />
 
     <!-- Favicon -->
     <link href="img/icon.png" rel="icon" />
@@ -244,7 +244,9 @@
             <h4 class="fa fa-phone-alt" style ="color: #ffec00"></h4>
             <div class="pl-3">
               <h5 class="text"  style ="color: #ffec00">Phone</h5>
-              <p style = "color: #fff">+91 8610371947</p>
+              <p style = "color: #fff">+91 8610371947 <br> 
+                +91 9360407431 <br>
+                +91 9655026660</p>
             </div>
           </div>
         </div>
