--- a/class.html
+++ b/class.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>ZingCraft</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta content="Our Services" name="keywords" />
+    <meta content="ZingCraft's Services" name="description" />
 
     <!-- Favicon -->
     <link href="img/icon.png" rel="icon" />
@@ -247,7 +247,9 @@
           <h4 class="fa fa-phone-alt" style ="color: #ffec00"></h4>
           <div class="pl-3">
             <h5 class="text"  style ="color: #ffec00">Phone</h5>
-            <p style = "color: #fff">+91 8610371947</p>
+            <p style = "color: #fff">+91 8610371947 <br> 
+              +91 9360407431 <br>
+              +91 9655026660</p>
           </div>
         </div>
       </div>
