--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ We teach life skills to teens through interactive activities, helping them devel
             <h4 class="fa fa-phone-alt" style ="color: #ffec00"></h4>
             <div class="pl-3">
               <h5 class="text"  style ="color: #ffec00">Phone</h5>
-              <p style = "color: #fff">+91 8610371947 <br> 
+              <p style = "color: #fff">
                                          +91 9360407431 <br>
                                          +91 9655026660
               </p>
